# TonicAudioPlugin

./: .gitignore  CMakeLists.txt  Delay.jucer  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: ComboBoxComponent.cpp  ComboBoxComponent.h  ConnectionComponent.cpp  ConnectionComponent.h  EffectButton.cpp  EffectButton.h  EffectNodeComponent.cpp  EffectNodeComponent.h  EffectParameterComponent.cpp  EffectParameterComponent.h  EffectParametersContainer.cpp  EffectParametersContainer.h  HorizontalLevelMeter.cpp  HorizontalLevelMeter.h  KnobComponent.cpp  KnobComponent.h  LevelMeterComponent.cpp  LevelMeterComponent.h  LookandFeel.cpp  LookandFeel.h  PresetFinderComponent.cpp  PresetFinderComponent.h  ToolbarComponent.cpp  ToolbarComponent.h  TopBarComponent.cpp  TopBarComponent.h  WorkspaceComponent.cpp  WorkspaceComponent.h
Source/Effects/: Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EffectRack.cpp  EffectRack.h  Equalizer.cpp  Equalizer.h  GainProcessor.cpp  GainProcessor.h  Reverb.cpp  Reverb.h
Source/Graph/: EffectGraphManager.cpp  EffectGraphManager.h
